--- a/iTunesSearchApiProject/iTunesSearchBackend/package.json
+++ b/iTunesSearchApiProject/iTunesSearchBackend/package.json
@@ -4,12 +4,16 @@
   "description": "iTunes Search App",
   "main": "searchApi.js",
   "scripts": {
-    "start": "nodemon searchApi.js",
+    "start": "node searchApi.js",
     "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "engines": {
+    "node": "18.17.1",
+    "npm":"9.6.7"
+  },
   "dependencies": {
     "body-parser": "^1.20.2",
     "express": "^4.18.2",
