--- a/itunesFrontend/package.json
+++ b/itunesFrontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "itunes",
   "version": "0.1.0",
+  "type": "module",
   "proxy": "http://localhost:8000",
   "private": true,
   "dependencies": {
